# Ros2Study

./: README.md  turtlesim_param.yaml
chapt2/chapt2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt2/chapt2_ws/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
chapt2/chapt2_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh  package.xml
chapt2/chapt2_ws/log/: latest_build
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp
chapt2/chapt3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt2/chapt3_ws/install/pkg_cpp/lib/pkg_cpp/: learn_thread  person_node  test_auto
chapt2/chapt3_ws/install/pkg_cpp/share/pkg_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chapt2/chapt3_ws/log/: latest_build
chapt2/chapt3_ws/src/pkg_cpp/: CMakeLists.txt
chapt2/chapt3_ws/src/pkg_cpp/src/: learn_thread.cpp  person_node.cpp  test_auto.cpp
chapt2/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt3/topic_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt3/topic_ws/install/pkg_cpp_topic/lib/pkg_cpp_topic/: turtle_circle  turtle_control
chapt3/topic_ws/install/pkg_cpp_topic/share/pkg_cpp_topic/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chapt3/topic_ws/log/: latest_build
chapt3/topic_ws/src/pkg_cpp_topic/: CMakeLists.txt
chapt3/topic_ws/src/pkg_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt4_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt4_ws/install/demo_cpp_service/lib/demo_cpp_service/: partol_client  turtle_control
chapt4_ws/install/demo_cpp_service/share/demo_cpp_service/: local_setup.sh  package.sh  package.xml
chapt4_ws/install/demo_cpp_service/share/demo_cpp_service/launch/: demo.launch.py
chapt4_ws/install/pkg_interfaces/share/pkg_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
chapt4_ws/install/pkg_interfaces/share/pkg_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_pkg_interfaces__rosidl_generator_cExport.cmake  export_pkg_interfaces__rosidl_generator_cppExport.cmake  export_pkg_interfaces__rosidl_generator_pyExport.cmake  export_pkg_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  pkg_interfacesConfig.cmake  (+9 more)
chapt4_ws/log/: latest_build
chapt4_ws/src/demo_cpp_service/: CMakeLists.txt
chapt4_ws/src/demo_cpp_service/launch/: demo.launch.py
chapt4_ws/src/demo_cpp_service/src/: partol_client.cpp  turtle_control.cpp
chapt4_ws/src/pkg_interfaces/: CMakeLists.txt  package.xml
chapt4_ws/src/pkg_interfaces/srv/: FaceDetector.srv  Partol.srv
chapt5_ws/install/: local_setup.sh  setup.sh
chapt5_ws/install/demo_cpp_tf/lib/demo_cpp_tf/: dynamic_tf_broadcaster  static_tf_broadcaster  tf_listener
chapt5_ws/install/demo_cpp_tf/share/demo_cpp_tf/: local_setup.sh  package.sh
chapt5_ws/log/: latest_build
chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
chapt6/install/: local_setup.sh  setup.sh
chapt6/install/fishbot_description/share/fishbot_description/: local_setup.sh  package.sh  package.xml
chapt6/log/: latest_build
chapt6/src/fishbot_description/urdf/fishbot/: base.urdf.xacro
chapt6/src/fishbot_description/world/: custom_room.world
first_node/: CMakeLists.txt  Makefile  first_node.cpp
package_example_cpp/install/: local_setup.sh  setup.sh
package_example_cpp/install/example_cpp/lib/example_cpp/: node_01  node_03
package_example_cpp/install/example_cpp/share/example_cpp/: local_setup.sh  package.sh  package.xml
package_example_cpp/log/: latest_build
package_example_cpp/src/example_cpp/: CMakeLists.txt
package_example_cpp/src/example_cpp/src/: node_01.cpp  node_03.cpp
rosbag2_2024_12_10-09_42_14/: metadata.yaml  rosbag2_2024_12_10-09_42_14_0.db3
(+86 files in other folders)
